src/test/ui/parser/pat-tuple-3.stderr
error: `..` can only be used once per tuple or tuple struct pattern
  --> $DIR/pat-tuple-3.rs:5:19
   |
LL |         (.., pat, ..) => {} //~ ERROR `..` can only be used once per tuple or tuple struct pattern
   |                   ^^

error: aborting due to previous error

